{community,testing}/plasma: upgrade to 5.18.1

--- a/community/bluedevil/APKBUILD
+++ b/community/bluedevil/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=bluedevil
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="Integrate the Bluetooth technology within KDE workspace and applications"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
@@ -12,19 +12,12 @@ makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtdeclarative-dev kcoreaddon
 source="https://download.kde.org/stable/plasma/$pkgver/bluedevil-$pkgver.tar.xz"
 subpackages="$pkgname-lang"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -33,8 +26,7 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
-sha512sums="ea64d3d65c3d93a3b05ff7cbb8b99575346d17f6f87ef13487701de6ea217abb0c55c596f8c62d62588606cf7747d0cd27079e8040274e5223704e9b0aefa5a3  bluedevil-5.18.0.tar.xz"
+sha512sums="c19ab2f9e3a4d79c1c10af197661bc0928257a6c85f16a50ff761fc78a8213991baae5d687e18bd9a19b01a2d6678407dd327aaff0c41151a61676d934b0038c  bluedevil-5.18.1.tar.xz"
