--- a/community/breeze-gtk/APKBUILD
+++ b/community/breeze-gtk/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=breeze-gtk
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="A GTK Theme Built to Match KDE's Breeze"
 arch="all !armhf" # armhf blocked by extra-cmake-modules
@@ -11,19 +11,12 @@ depends="gtk-engines"
 makedepends="extra-cmake-modules sassc breeze-dev breeze py3-cairo"
 source="https://download.kde.org/stable/plasma/$pkgver/breeze-gtk-$pkgver.tar.xz"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -32,7 +25,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
-sha512sums="ef156b514c50f154c091dd3a39f51c69039ff43147d52cded28d474ce75f1128713f1a06fcd4326c6a39aa634290bfe7cf22a98f4b979dab8351ceb311890983  breeze-gtk-5.18.0.tar.xz"
+sha512sums="7dfe4448abbe17bc6bcc26b9083ab7f8f025aff5280fa32b75e90172c0481b8a7e4c54300e1c61ba4949bbdbb798e65897c2f3450f17ea2b4bd4f3e2d2b87963  breeze-gtk-5.18.1.tar.xz"
