--- a/community/breeze-plymouth/APKBUILD
+++ b/community/breeze-plymouth/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=breeze-plymouth
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://kde.org/"
@@ -12,25 +12,17 @@ makedepends="extra-cmake-modules plymouth-dev"
 source="https://download.kde.org/stable/plasma/$pkgver/breeze-plymouth-$pkgver.tar.xz"
 options="!check" # No tests
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DDISTRO_NAME="$(grep PRETTY_NAME /etc/os-release | awk -F  = '{ print $2 }')" \
 		-DDISTRO_VERSION="$(grep VERSION_ID /etc/os-release | awk -F  = '{ print $2 }')"
-	make
+	make -C build
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
-sha512sums="506e589f529e2ea3ac02d319093cf0f959a7a26d1092ba5a6d6a65016f96d484b03b033cca6326a0c1c5b36a52ad8951bc25d91682f7eabc4149739b3811bd48  breeze-plymouth-5.18.0.tar.xz"
+sha512sums="4a321cf119152168c5bac3d50dc9aa91bbe06476b75bf1f4bf1e3de63f3ffc3f8023dc7e388a42486f756222c3672643d35ab60a9eef0d255a0fbb677623af8b  breeze-plymouth-5.18.1.tar.xz"
