--- a/community/breeze/APKBUILD
+++ b/community/breeze/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=breeze
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="Artwork, styles and assets for the Breeze visual style for the Plasma Desktop"
 arch="all !armhf" # disable on armhf due to missing qt5-qtdeclarative
@@ -12,19 +12,12 @@ makedepends="$depends_dev extra-cmake-modules"
 source="$pkgname-$pkgver.tar.xz::https://download.kde.org/stable/plasma/$pkgver/breeze-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-lang"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -33,7 +26,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
-sha512sums="dfa2a2ac4cf933509136774665219d5540719d769dfdcb2635a3bfa711d0bf8ca2e76e19200294dbd0123997484e1e209c643581438b26bd407323e5de28b40c  breeze-5.18.0.tar.xz"
+sha512sums="e6564ab2c7ddf54dcdde67266f93f261250856e24ff63bfcb2ff2c461627cbfca55eb4e672e5440266a5a73c513e8c5f0222b08217002af3c71bbc3d1459c816  breeze-5.18.1.tar.xz"
