--- a/community/discover/APKBUILD
+++ b/community/discover/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=discover
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://userbase.kde.org/Discover"
@@ -21,20 +21,13 @@ case "$CARCH" in
 	*) ;;
 esac
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DCMAKE_DISABLE_FIND_PACKAGE_Snapd=ON
-	make
+	make -C build
 }
 
 check() {
@@ -44,8 +37,7 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 backend_flatpak() {
@@ -87,4 +79,4 @@ backend_fwupd() {
 		"$subpkgdir"/usr/lib/qt5/plugins/discover/
 }
 
-sha512sums="9687b3b5d295e4a133466adf184056aa96762e5bedf084572342699df678ef3b3a8b35f390611dddbd1a4e1c6222d0a204df3fa8a28a17cc2b6a969d432d1a96  discover-5.18.0.tar.xz"
+sha512sums="421a3dc876d8506fa44a7b7479199f6e38f5048bd2ddb07c352a370e33652e4ce873e4f78628c4186f18492b961f8ff26413902019e1d96e64ade4150f519ac7  discover-5.18.1.tar.xz"
