--- a/community/drkonqi/APKBUILD
+++ b/community/drkonqi/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=drkonqi
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="Manages the power consumption settings of a Plasma Shell"
 arch="all !armhf" # armhf blocked by extra-cmake-modules
@@ -12,20 +12,13 @@ source="https://download.kde.org/stable/plasma/$pkgver/drkonqi-$pkgver.tar.xz"
 subpackages="$pkgname-lang"
 options="!check" # Broken
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_TESTING=OFF # Broken
-	make
+	make -C build
 }
 
 check() {
@@ -34,8 +27,7 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
-sha512sums="3434b6d5e441128f1607363f1af4fee7c3b8f93c5d35042e0ff4daf029fec3cc9e7e70fe43e852635c1ca7be35bc34046f9aea9ea611d1ecc5ec5a7a8246beaf  drkonqi-5.18.0.tar.xz"
+sha512sums="8f2fbc003f50215edb069b9cd2bdb0d452d7caae510ee4865ff351bf9ade6fbcc4770322f0a2e77d766042f7e1fa96e4cfb883cb17cc8145bc48bcafee609658  drkonqi-5.18.1.tar.xz"
