--- a/community/kactivitymanagerd/APKBUILD
+++ b/community/kactivitymanagerd/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kactivitymanagerd
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="System service to manage user's activities and track the usage patterns"
 arch="all !armhf" # disable armhf due to missing qt5-qtdeclarative
@@ -12,19 +12,12 @@ makedepends="extra-cmake-modules boost-dev qt5-qtbase-dev kdbusaddons-dev ki18n-
 source="https://download.kde.org/stable/plasma/$pkgver/kactivitymanagerd-$pkgver.tar.xz"
 subpackages="$pkgname-lang"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -33,7 +26,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
-sha512sums="0e4374782828841289943742c2770b7ac9978120a72ff832dc77716ae3f817345c92f89ca7673b03b5d506384d3f8335580392cbd2f74b48125911de470ab509  kactivitymanagerd-5.18.0.tar.xz"
+sha512sums="ff6cd14ef09e4843b84770cdc02388fef2739840afe94188e0a6439f5b9b524d8224d6630ca022d58f1c170fb1fa7578b6636aa9e42b5f20a459855b96ac8963  kactivitymanagerd-5.18.1.tar.xz"
