--- a/community/kde-cli-tools/APKBUILD
+++ b/community/kde-cli-tools/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kde-cli-tools
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="Tools based on KDE Frameworks 5 to better interact with the system"
 arch="all !armhf" # armhf blocked by extra-cmake-modules
@@ -13,19 +13,12 @@ source="https://download.kde.org/stable/plasma/$pkgver/kde-cli-tools-$pkgver.tar
 subpackages="$pkgname-doc $pkgname-lang"
 options="!check" # Broken
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -34,7 +27,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
-sha512sums="8a7a781e76e5c548a7a60b9bcf305e272f7f35e2c9c1fc5164abddb0c2b5b7a845c3d8ec2f022f29c49d1e7382bc462a6bb25c6642885fc6575d951fc4d5da08  kde-cli-tools-5.18.0.tar.xz"
+sha512sums="8787d68c64e9b442f1562be608457fdf1bb829c0a9e481cc859153e9091784d5392d7a7568d08b58115cb4d90ab595852610d25b25e922f99adb50e5289235cd  kde-cli-tools-5.18.1.tar.xz"
