--- a/community/kdecoration/APKBUILD
+++ b/community/kdecoration/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kdecoration
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="Plugin based library to create window decorations"
 arch="all !armhf"
@@ -9,32 +9,24 @@ url="https://www.kde.org/workspaces/plasmadesktop/"
 license="LGPL-2.1-only OR LGPL-3.0-only"
 depends_dev="qt5-qtbase-dev ki18n-dev"
 makedepends="$depends_dev extra-cmake-modules"
+checkdepends="xvfb-run"
 source="https://download.kde.org/stable/plasma/$pkgver/kdecoration-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-lang"
-options="!check" # Fails due to requiring running X11
-
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
 
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
 	cd "$builddir"/build
-	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
+	CTEST_OUTPUT_ON_FAILURE=TRUE xvfb-run ctest
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
-sha512sums="b8f1c79664c4cb11cc26bb5114cb0bf41fbf31c8f71c8d55a3fb38b8eef111fb3d87493a7a8bdfaa6d299775d66e70b4b4c5801687b98087d0a6e7e30bdd6274  kdecoration-5.18.0.tar.xz"
+sha512sums="58df912b78a467021f8d8cef24cfc384476d91d0d13d55cbf0b5b6056a0f4e69d008fd6c37abb6224fa7e1a248f9951f0af69fcdd1b791aad90ace8168d7febc  kdecoration-5.18.1.tar.xz"
