--- a/community/kdeplasma-addons/APKBUILD
+++ b/community/kdeplasma-addons/APKBUILD
@@ -1,10 +1,12 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kdeplasma-addons
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="All kind of addons to improve your Plasma experience"
-arch="all !ppc64le !s390x !armhf" # ppc64le and s390x blocked by qt5-qtwebengine, armhf blocked by qt5-qtdeclarative
+# ppc64le and s390x blocked by qt5-qtwebengine
+# armhf blocked by qt5-qtdeclarative
+arch="all !ppc64le !s390x !armhf"
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="LGPL-2.0-only AND GPL-2.0-or-later"
 depends="purpose"
@@ -17,19 +19,12 @@ makedepends="$depends_dev extra-cmake-modules"
 source="https://download.kde.org/stable/plasma/$pkgver/kdeplasma-addons-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-lang"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -38,7 +33,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
-sha512sums="d6cb3daf39949e2fe2221cfce48a55ecfffb328ed46ca69da45f42b4323107bb9b908f40975f6f76cf7b1dc1a3481cf597287b46df003b3d3913df18d85f590a  kdeplasma-addons-5.18.0.tar.xz"
+sha512sums="c67bd220d34d14d488b1d1d3d4db096d4b9a0757157419438e4c1390d9903236bf6b1915f179929bfe459e6d2caa61dd20d1cee327c70335c0da868cc587831a  kdeplasma-addons-5.18.1.tar.xz"
