--- a/community/khotkeys/APKBUILD
+++ b/community/khotkeys/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=khotkeys
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://www.kde.org/workspaces/plasmadesktop/"
@@ -12,19 +12,12 @@ source="https://download.kde.org/stable/plasma/$pkgver/khotkeys-$pkgver.tar.xz"
 subpackages="$pkgname-doc $pkgname-lang $pkgname-dev"
 options="!check" # No tests
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
-build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+build() {	
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -33,8 +26,7 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
-sha512sums="bbdc13144533470d9ecb8a5adfcfef9cb03dcff6a7c54d317d8d28458b6f9c5e30dc65bfbc5d6e3efa845919a3d252e0723ba24e86053879d4de131275e44a22  khotkeys-5.18.0.tar.xz"
+sha512sums="5e1ac026d48b21e07d3170ac57b5b5841f04a98ddc97a28725c0084ea140573a2b97b11295d0c3fe77709e60e41f7f8f89880873855896e36a175aa87d8ff947  khotkeys-5.18.1.tar.xz"
