--- a/community/kinfocenter/APKBUILD
+++ b/community/kinfocenter/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kinfocenter
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="A utility that provides information about a computer system"
 arch="all !armhf" # armhf blocked by extra-cmake-modules
@@ -11,19 +11,12 @@ makedepends="extra-cmake-modules qt5-qtbase-dev kcompletion-dev kconfig-dev kcon
 source="https://download.kde.org/stable/plasma/$pkgver/kinfocenter-$pkgver.tar.xz"
 subpackages="$pkgname-doc $pkgname-lang"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -32,8 +25,7 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
-sha512sums="e07955c8cc181abda437d7ad2febe3c85cf2e3f0109065cdedd7092cf397557dd842398f0b4e46d97c16457a53e8822ba0a2469cce03e0ef37612accd8caeae0  kinfocenter-5.18.0.tar.xz"
+sha512sums="fa13b34d0da3355f2d1bf244c5d93cbcf36ae35026543e84e2d76df6095c96e498e48332576f1220d0a2bf7ccedc4d6dbafc71040a3b110d9b5a8d9a9096d4f8  kinfocenter-5.18.1.tar.xz"
