--- a/community/kscreenlocker/APKBUILD
+++ b/community/kscreenlocker/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kscreenlocker
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="Library and components for secure lock screen architecture"
 arch="all !armhf"
@@ -17,19 +17,12 @@ source="https://download.kde.org/stable/plasma/$pkgver/kscreenlocker-$pkgver.tar
 subpackages="$pkgname-dev $pkgname-lang"
 options="!check" # Requires running loginctl
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -38,13 +31,12 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 
 	install -D -m644 "$srcdir"/kde.pam "$pkgdir"/etc/pam.d/kde
 	install -m644 "$srcdir"/kde-np.pam "$pkgdir"/etc/pam.d/kde-np
 }
 
-sha512sums="3d9878ff0749175636f34d1bd694d3a2992e67a3e65556f3fe9773f20080c30e1cbff46619960b9357cd8c515082760bcb4b5c03fbc985006f4771b509cae634  kscreenlocker-5.18.0.tar.xz
+sha512sums="042ecda684e65aec104610f8234b873de6a2a15412151188bb813546e3c91023fcc1c9b5451e0386c288b50940ccee44a76e5db49500945fdbb4cf3e7c6fccdb  kscreenlocker-5.18.1.tar.xz
 56e87d02d75c4a8cc4ed183faed416fb4972e7f223b8759959c0f5da32e11e657907a1df279d62a44a6a174f5aca8b2ac66a5f3325c5deb92011bcf71eed74c3  kde.pam
 565265485dd7466b77966d75a56766216b8bcc187c95a997e531e9481cf50ddbe576071eb0e334421202bcab19aa6de6b93e042447ca4797a24bf97e1d053ffd  kde-np.pam"
