--- a/community/ksysguard/APKBUILD
+++ b/community/ksysguard/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=ksysguard
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="Track and control the processes running in your system"
 arch="all !armhf" # armhf blocked by extra-cmake-modules
@@ -11,19 +11,12 @@ makedepends="extra-cmake-modules kconfig-dev kcoreaddons-dev kdbusaddons-dev kdo
 source="https://download.kde.org/stable/plasma/$pkgver/ksysguard-$pkgver.tar.xz"
 subpackages="$pkgname-doc $pkgname-lang"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -32,7 +25,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
-sha512sums="445a17452183ba7fe1daa79bc9a5448d30ae65488cfa935b68f91cde8f2dc94d69a0e3cdd262928572ee782f3cdd10c5f2ce8285a21e8509504ccfb0febe5168  ksysguard-5.18.0.tar.xz"
+sha512sums="e8419e3f78f41c31693e2088a75e3d0e5ef9afb7d292fa2405293cbed0e2978022da3fd55bf2c6c3c726ff3531448b5f55af7bf44f48b6ca256d5ac6477f806e  ksysguard-5.18.1.tar.xz"
