--- a/community/kwallet-pam/APKBUILD
+++ b/community/kwallet-pam/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kwallet-pam
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="KWallet PAM integration"
 arch="all !armhf" # armhf blocked by extra-cmake-modules
@@ -11,24 +11,16 @@ makedepends="extra-cmake-modules linux-pam-dev libgcrypt-dev socat kwallet-dev"
 source="https://download.kde.org/stable/plasma/$pkgver/kwallet-pam-$pkgver.tar.xz"
 options="!check" # No tests available
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
-sha512sums="a0b60d5c0f0448f4334b6571af771832e0f15f30900d63f93f18fb8f687f15641d4c04a4b754d681fe78188c03c641f39ba5dde62696cff6adc4d3d5bd26f015  kwallet-pam-5.18.0.tar.xz"
+sha512sums="e3503f8616db0eec30cab08f61ea119d64dc86d30de03958d3437517c4f0fdec49536eb34e49bb62344c9e5803b4bf162187c4c25cdde2beb4196358b25215b5  kwallet-pam-5.18.1.tar.xz"
