--- a/community/kwayland-integration/APKBUILD
+++ b/community/kwayland-integration/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bhushan Shah <bshah@kde.org>
 # Maintainer: Bhushan Shah <bshah@kde.org>
 pkgname=kwayland-integration
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="KWayland integration"
 url="https://www.kde.org/workspaces/plasmadesktop/"
@@ -12,24 +12,16 @@ makedepends="cmake extra-cmake-modules qt5-qtbase-dev kwayland-dev kwindowsystem
 source="https://download.kde.org/stable/plasma/$pkgver/kwayland-integration-$pkgver.tar.xz"
 options="!check" # Broken
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
-sha512sums="14356f3b8591d8b6e70c58a5e8392fa035f645072dce5f1e129d2eb080bd6a8c2b9f735260616c6ddb47646a8a0d836848d60ea7060dc8343914995ca7cb4be6  kwayland-integration-5.18.0.tar.xz"
+sha512sums="d3601d1797b719210b844b4e20ebe4a909737165b27924d197bbc04e7b38f3006a79e58a281a82c9ddd77cca3499d0fad1e851be95a7ff11f9948cc43a6823e7  kwayland-integration-5.18.1.tar.xz"
