--- a/community/kwin/APKBUILD
+++ b/community/kwin/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kwin
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="An easy to use, but flexible, composited Window Manager"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
@@ -15,19 +15,12 @@ source="https://download.kde.org/stable/plasma/$pkgver/kwin-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 options="!check" # Broken
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -36,7 +29,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
-sha512sums="8c64a0023493268c56d38044ae0d289633271a7eb4410b814741de79d4b7c37fe2fd11a63f50f3de1fac8c9cd8181ca59a2c1bfbd6a9298b10094f9c635de9dc  kwin-5.18.0.tar.xz"
+sha512sums="1bc489f6f59d019133b8470de59bcd0b13d39084f7b7ab102f4e5696aa6a6a1866044148c1cd6b5bbd3ee3d4a5b3158811650bf599545a3825c2695aa6c7fcf5  kwin-5.18.1.tar.xz"
