--- a/community/kwrited/APKBUILD
+++ b/community/kwrited/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kwrited
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="KDE daemon listening for wall and write messages"
 arch="all !armhf" # qt5-qtdeclarative-dev  unavilable on armhf
@@ -11,24 +11,16 @@ makedepends="extra-cmake-modules qt5-qtbase-dev kcoreaddons-dev ki18n-dev kpty-d
 source="https://download.kde.org/stable/plasma/$pkgver/kwrited-$pkgver.tar.xz"
 options="!check" # No tests available
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
-sha512sums="201f9d7c4fe28bba4d1ac1820dcca48f950af365a96497a41d108780563e4cc5d26760ad0934c77ce1f6b6380704139ee5310e173fc8edd18fac5d74fa4770c6  kwrited-5.18.0.tar.xz"
+sha512sums="fe90fff737e3f56d45c3c55f84ea75d30f11c666aedbaa916940299df7836a25d4b19d552b28b2241aae99dfbb6c34bed71c487b70a82c28480d437e34b0f76f  kwrited-5.18.1.tar.xz"
