--- a/community/milou/APKBUILD
+++ b/community/milou/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=milou
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="A dedicated search application built on top of Baloo"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
@@ -11,19 +11,12 @@ makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtdeclarative-dev kcoreaddon
 source="https://download.kde.org/stable/plasma/$pkgver/milou-$pkgver.tar.xz"
 subpackages="$pkgname-lang"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -32,7 +25,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
-sha512sums="46733d5b4adb76fc1c1914c393b309804515ff67feab138824cfca2aa825337c812b7b2c5e54fe2fc8725bd9b4d2eb18c7b0fba503baa9bdec25d08093560268  milou-5.18.0.tar.xz"
+sha512sums="abb3935c52d19ecc066c770ca3e344e9d4a7a04d8d82647cf8223c32a31bbc26bb1f93c08bbf3f62ab843f56c909c15d0e8aba33878528247a19117785ee8126  milou-5.18.1.tar.xz"
