--- a/community/oxygen/APKBUILD
+++ b/community/oxygen/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=oxygen
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="Artwork, styles and assets for the Oxygen visual style for the Plasma Desktop"
 arch="all !armhf" # armhf blocked by extra-cmake-modules
@@ -11,19 +11,12 @@ makedepends="extra-cmake-modules qt5-qtbase-dev ki18n-dev kconfig-dev kguiaddons
 source="$pkgname-$pkgver.tar.xz::https://download.kde.org/stable/plasma/$pkgver/oxygen-$pkgver.tar.xz"
 subpackages="$pkgname-lang"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -32,7 +25,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
-sha512sums="26aa01ce0ff7cd45e6564720821951487c0720bd8c7b0d193344ed3d1e36c4d74a72388b7267b691e428cb51687309677e5fd532159c74760b5a6e39710eca8e  oxygen-5.18.0.tar.xz"
+sha512sums="b51879eb3a6f8f55bcf71373764df31d152e373cf33ef643342db3c68ce61246a436320ba6dba8e3fbe3467f9c2f8c2126973467475b93075e2be5d09f0c4620  oxygen-5.18.1.tar.xz"
