--- a/community/plasma-integration/APKBUILD
+++ b/community/plasma-integration/APKBUILD
@@ -1,10 +1,10 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=plasma-integration
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="Qt Platform Theme integration plugins for the Plasma workspaces"
-arch="all !armhf" #qtdeclarative
+arch="all !armhf" # Blocked by qt5-qtdeclarative
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="(LGPL-2.1-only OR LGPL-3.0-only) AND LGPL-2.1-only AND ((LGPL-2.1-only WITH Nokia-Qt-exception-1.1) OR (GPL-3.0-only WITH Nokia-Qt-exception-1.1))"
 depends="font-noto ttf-hack qqc2-desktop-style"
@@ -14,21 +14,14 @@ source="https://download.kde.org/stable/plasma/$pkgver/plasma-integration-$pkgve
 subpackages="$pkgname-lang"
 options="!check" # Broken
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DCMAKE_DISABLE_FIND_PACKAGE_FontNotoSans=true \
 		-DCMAKE_DISABLE_FIND_PACKAGE_FontHack=true
-	make
+	make -C build
 }
 
 check() {
@@ -37,7 +30,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
-sha512sums="c6ba798d6525c7d8cfd46874a1ffd7c6147e600f64a49b410b124945f7a46de0003166b049981897fb20f8776a66d14b9cf7fc1e4729497dc6285421d5161850  plasma-integration-5.18.0.tar.xz"
+sha512sums="a4ff74dc6822ad8e75d16f173312557af03b65ea30bf4aa1918046fd0a469380435d80f2fd0465ad3fc6a6a4d9e97393ae8f558c210544297cb30b044be9cf30  plasma-integration-5.18.1.tar.xz"
