--- a/community/plasma-nm/APKBUILD
+++ b/community/plasma-nm/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=plasma-nm
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="Plasma applet written in QML for managing network connections"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
@@ -12,20 +12,13 @@ makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtdeclarative-dev ki18n-dev 
 source="https://download.kde.org/stable/plasma/$pkgver/plasma-nm-$pkgver.tar.xz"
 subpackages="$pkgname-lang $pkgname-mobile"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_MOBILE=ON
-	make
+	make -C build
 }
 
 check() {
@@ -34,8 +27,7 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 mobile() {
@@ -52,4 +44,4 @@ mobile() {
 		"$pkgdir"/usr/share/kservices5/wifisettings.desktop \
 		"$subpkgdir"/usr/share/kservices5/
 }
-sha512sums="d8d38835674c878faed1e2c4f77a2b022a3a1421d6c531f48d6732048c1ad567f185a45065608cbdb0f337d6b2f6398f2e017f21c8347765ce3bc02b9ac3646a  plasma-nm-5.18.0.tar.xz"
+sha512sums="36f45ecc93e502b512346093cb8f71047e2200fe3cf9d7f198d41b5dda03725c0080981a0c09d76929b394f46635376cf1605455deeadc6d4eb665570f0ba453  plasma-nm-5.18.1.tar.xz"
