--- a/community/plasma-pa/APKBUILD
+++ b/community/plasma-pa/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=plasma-pa
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="Plasma applet for audio volume management using PulseAudio"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
@@ -12,20 +12,13 @@ makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtdeclarative-dev kcoreaddon
 source="https://download.kde.org/stable/plasma/$pkgver/plasma-pa-$pkgver.tar.xz"
 subpackages="$pkgname-doc $pkgname-lang"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DUSE_GCONF=OFF
-	make
+	make -C build
 }
 
 check() {
@@ -34,7 +27,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
-sha512sums="63d9862b54589f2c803f0deae2c8c50dc2fe7840ef72dca24ef461d13993ddd352acf636648fd90877a8b47af1f1cd9711acebe432caf1d631c2743ad6d4d7cd  plasma-pa-5.18.0.tar.xz"
+sha512sums="3d5b77bc4e6814f415400e34a79fed0ac79a17a13aa0dc6486a895db1c872721f2c15fd01439fabe72286a7749e9b8cd96f2b4c1e8f788949d58d8a3bef77669  plasma-pa-5.18.1.tar.xz"
