--- a/community/plasma-sdk/APKBUILD
+++ b/community/plasma-sdk/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=plasma-sdk
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="Applications useful for Plasma Development"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
@@ -13,19 +13,12 @@ checkdepends="xvfb-run"
 source="https://download.kde.org/stable/plasma/$pkgver/plasma-sdk-$pkgver.tar.xz"
 subpackages="$pkgname-doc $pkgname-lang"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -35,8 +28,7 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
-sha512sums="2b3bc8d2fba3ef16c3095f7bf7f320aaaccf78b96f567fe2d0243ed5d37c77caf223c08e7e6f7205ee765e3b325b31597224c54529b526ad63f1a1695e43beed  plasma-sdk-5.18.0.tar.xz"
+sha512sums="582148267790ae3c58ea632386bad89c4a2692f947d7b6cbb7f1039adad042896dbe0c33f5ead38cbe8b97c577b1c1e52d41742f4a7b18efc3939b0375936a7c  plasma-sdk-5.18.1.tar.xz"
