--- a/community/plasma-thunderbolt/APKBUILD
+++ b/community/plasma-thunderbolt/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=plasma-thunderbolt
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 arch="all !armhf !armv7" # Limited by bolt -> polkit, armhf also limited by qt5-qtdeclarative
 url="https://www.kde.org/workspaces/plasmadesktop/"
@@ -14,19 +14,12 @@ source="https://download.kde.org/stable/plasma/$pkgver/plasma-thunderbolt-$pkgve
 subpackages="$pkgname-lang"
 options="!check" # Requires running dbus server
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -35,8 +28,7 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
-sha512sums="ec91b9c943e57a5a000b5d2296759299ac0c23b5d1e2ad6918a052df74a38b08cfa793ee770cd6d7049c56850e245aa3ce6b6b428d6751d9047105cdcccc26bb  plasma-thunderbolt-5.18.0.tar.xz"
+sha512sums="bf6499a6ebf1d0f5ab22eba8c6a6d782985df9438006a8a4c3eeb213cf2af1a1face3e4edf081edd2c22159a5cf87c412db930a110d392e3bfc3921cca4d1729  plasma-thunderbolt-5.18.1.tar.xz"
