--- a/community/plasma-workspace-wallpapers/APKBUILD
+++ b/community/plasma-workspace-wallpapers/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=plasma-workspace-wallpapers
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="Wallpapers for the Plasma Workspace"
 arch="noarch !armhf" # armhf blocked by extra-cmake-modules
@@ -11,24 +11,16 @@ makedepends="extra-cmake-modules"
 source="https://download.kde.org/stable/plasma/$pkgver/plasma-workspace-wallpapers-$pkgver.tar.xz"
 options="!check" # No tests available
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
-sha512sums="7433b27b583b640fe4a3f78c2abd24592e2cb9c62fdf80110fdc366c97e64dab3f4fb288e9cf617b5aada92b6bd6bc7662774e4614eb70c95ebeffbaeecdd380  plasma-workspace-wallpapers-5.18.0.tar.xz"
+sha512sums="2d7bbd75ac43f0018f114b99b26e1ef53ef19920a6fb6a00adc5b03b155c03c8eb713ea85493fdc5c1f2f98a2ebd2dd9c5e6061d2900f06fd034e1f12647a9d2  plasma-workspace-wallpapers-5.18.1.tar.xz"
