--- a/community/plasma-workspace/APKBUILD
+++ b/community/plasma-workspace/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=plasma-workspace
-pkgver=5.18.0
-pkgrel=1
+pkgver=5.18.1
+pkgrel=0
 pkgdesc="KDE Plasma Workspace"
 arch="all !armhf" # armhf blocked by kirigami2 -> qt5-qtdeclarative
 url="https://www.kde.org/workspaces/plasmadesktop/"
@@ -14,19 +14,12 @@ checkdepends="xvfb-run"
 source="https://download.kde.org/stable/plasma/$pkgver/plasma-workspace-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-libs $pkgname-doc $pkgname-lang"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -37,7 +30,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
-sha512sums="afce0ef26b1ce5e8bbc56c8ac4eac1ae097126966c0e9b77ffe74278f270a3ae9fc2bd116be939e13b3134ad9967cb80501ed1194f115710529ac98f408e903a  plasma-workspace-5.18.0.tar.xz"
+sha512sums="af0315b32490f2f55f112f09963e3419eba4d178861504080e1880ad8dbc725006a7b88fe234b2963e9c6995f2303a9a5e91e599dcbac4cdc382830b30e94fda  plasma-workspace-5.18.1.tar.xz"
