--- a/community/plymouth-kcm/APKBUILD
+++ b/community/plymouth-kcm/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=plymouth-kcm
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://cgit.kde.org/plymouth-kcm.git"
@@ -13,19 +13,12 @@ source="https://download.kde.org/stable/plasma/$pkgver/plymouth-kcm-$pkgver.tar.
 subpackages="$pkgname-lang"
 options="!check" # No tests
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -34,8 +27,7 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
-sha512sums="72ca5760794b1d20480d8ccd1780d219aecae29508363be63e7058c6857833d74217fb535c0b382ecb37ad74933a16ea5a39c24d270aad1f220f2b868aaebe36  plymouth-kcm-5.18.0.tar.xz"
+sha512sums="6f0f3ed407f9df962a28b06e1039823d6ecc2c837108fb31d65ef79233454585c20ae1bc239d89279434b74bb3beae5ce0aaebf8645d5747e7ebae5445758d25  plymouth-kcm-5.18.1.tar.xz"
