--- a/community/polkit-kde-agent-1/APKBUILD
+++ b/community/polkit-kde-agent-1/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=polkit-kde-agent-1
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="Daemon providing a polkit authentication UI for KDE"
 arch="all !armhf" # armhf blocked by extra-cmake-modules
@@ -12,19 +12,12 @@ makedepends="extra-cmake-modules qt5-qtbase-dev ki18n-dev kwindowsystem-dev kdbu
 source="https://download.kde.org/stable/plasma/$pkgver/polkit-kde-agent-1-$pkgver.tar.xz"
 subpackages="$pkgname-lang"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -33,8 +26,7 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
-sha512sums="497c914a73db3cb7a7b8964bfaaeca43d6ebc614b6b23b6ecbff94cea7526c09727bb4c9e167d4c45928a39779a408b9b22025cd76a55a9a346f4c0504e1791e  polkit-kde-agent-1-5.18.0.tar.xz"
+sha512sums="3ff86069b6621f2289d7cf701a68d4f9ab59c06f9832e55a48be454f5f7d50a020981f07c6712bb59eafca919c00428a12ac770a76bb128d40fe07e846dcecbb  polkit-kde-agent-1-5.18.1.tar.xz"
