--- a/community/powerdevil/APKBUILD
+++ b/community/powerdevil/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=powerdevil
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="Manages the power consumption settings of a Plasma Shell"
 arch="all !armhf" # armhf blocked by extra-cmake-modules
@@ -13,19 +13,12 @@ makedepends="$depends_dev extra-cmake-modules kdoctools-dev"
 source="https://download.kde.org/stable/plasma/$pkgver/powerdevil-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-libs $pkgname-doc $pkgname-lang"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -34,8 +27,7 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
-sha512sums="be42b1b5171e87697c9dba3d5b4aa16c074d61272c97a40d4515dd80cc4e3640e4b0bd03d44a2369adb38a6e47b9e6a6e9e879ff574a88502f8c38d41cd3c586  powerdevil-5.18.0.tar.xz"
+sha512sums="2bfbe248be2d05f8c241ded960195d80d1faee820c7ef5c810de10dd17758931dabd7d3a3fe3bbdc86fea04f8a1693fdf63643ced4d215f9248138e2e9920830  powerdevil-5.18.1.tar.xz"
