--- a/community/sddm-kcm/APKBUILD
+++ b/community/sddm-kcm/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=sddm-kcm
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="Config module for SDDM"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
@@ -12,19 +12,12 @@ makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtx11extras-dev qt5-qtdeclar
 source="https://download.kde.org/stable/plasma/$pkgver/sddm-kcm-$pkgver.tar.xz"
 subpackages="$pkgname-lang"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -33,7 +26,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
-sha512sums="d32987a07e809c063915d044ebec88324766829458792ff2ba9dd25a036c4e409a310639d22630b7e987efe97ee823a3239d102b362fe958bdb5df02f0eb2343  sddm-kcm-5.18.0.tar.xz"
+sha512sums="1f0d03209152f613106e1a2f53e6f300861e6afc2adc654e836334e5444d57da797e44304e6829fc9ffd8c636b2cdaddbad8c1d616b81b6a03f479999dcc1bff  sddm-kcm-5.18.1.tar.xz"
