--- a/community/systemsettings/APKBUILD
+++ b/community/systemsettings/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=systemsettings
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="Plasma system manager for hardware, software, and workspaces"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
@@ -13,19 +13,12 @@ makedepends="$depends_dev extra-cmake-modules"
 source="https://download.kde.org/stable/plasma/$pkgver/systemsettings-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -34,7 +27,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
-sha512sums="9447a0140ed3fd8eafca2a6d44e378247ed8a78a2f92f80a6467073d45bc7feac43e039d73493a568760f38d42d5c7bd67b5805ac5b2732a7a2b4348ac0f331f  systemsettings-5.18.0.tar.xz"
+sha512sums="4ee4ed2bf9ab95490d45da7111bc4fba4b3065ce7e9f8561ad9ff9490893d95afe65550c1ee9f3ded500d0fe1c744a82c511166d4d5c32909d28448e5ff589ef  systemsettings-5.18.1.tar.xz"
