--- a/community/user-manager/APKBUILD
+++ b/community/user-manager/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=user-manager
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="A simple system settings module to manage the users of your system"
 arch="all !armhf" # armhf blocked by extra-cmake-modules
@@ -11,19 +11,12 @@ makedepends="extra-cmake-modules qt5-qtbase-dev kwidgetsaddons-dev kcoreaddons-d
 source="https://download.kde.org/stable/plasma/$pkgver/user-manager-$pkgver.tar.xz"
 subpackages="$pkgname-lang"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -32,7 +25,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
-sha512sums="6feb9b2ed25ca2ade7d97d0110cae376af4d3550d98bc79cf1905058d1f5ad8a237ced00456ad1a9355433aeab5ee4f854a5bff2a2b636bb03dbce264b4d102c  user-manager-5.18.0.tar.xz"
+sha512sums="0814605d369861d2fb55506e5bdb843185100aa5610d698365c31422b909321113383feefa4c7d549a909773372cac15b79394d1691974dc5dcb51732b54c177  user-manager-5.18.1.tar.xz"
