--- a/community/kgamma5/APKBUILD
+++ b/community/kgamma5/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kgamma5
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="Adjust your monitor's gamma settings"
 arch="all !armhf" # armhf blocked by extra-cmake-modules
@@ -11,19 +11,12 @@ makedepends="qt5-qtbase-dev kconfig-dev kconfigwidgets-dev kdoctools-dev ki18n-d
 source="https://download.kde.org/stable/plasma/$pkgver/kgamma5-$pkgver.tar.xz"
 subpackages="$pkgname-doc $pkgname-lang"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -32,8 +25,7 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
-sha512sums="95c7b4e2af25b9daa260744cb6ddf73c20811c23cb1240ae683b54a306fc28a937507be55452b2d55b06f8662fe821ee4214263fbb7e8c06cd56b44584dce084  kgamma5-5.18.0.tar.xz"
+sha512sums="5cd9f9da8c614142ffa669232c447c2cab023a75cbb1cd35d875893349499c83cd8e94afd83b14eab1b316b8a34a1c587824bcb65668d3e9fc7f8da9647f1b45  kgamma5-5.18.1.tar.xz"
