--- a/community/ksshaskpass/APKBUILD
+++ b/community/ksshaskpass/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=ksshaskpass
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="ssh-add helper that uses kwallet and kpassworddialog"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
@@ -11,19 +11,12 @@ makedepends="extra-cmake-modules qt5-qtbase-dev kcoreaddons-dev ki18n-dev kwalle
 source="https://download.kde.org/stable/plasma/$pkgver/ksshaskpass-$pkgver.tar.xz"
 subpackages="$pkgname-doc $pkgname-lang"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -32,8 +25,7 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
-sha512sums="b16c56845576c1d0c19deabd2a826d631eebef9307e93aded4f8b3f8bbeb02992a3d5e29278f1c2eeecf40c59c5e31612f2bf5125e7b5b65d04db3fb1d1abb94  ksshaskpass-5.18.0.tar.xz"
+sha512sums="c905849ee3f957f6767187109abbac29c8036c90fa54b7fd13a3f9c1bdd9f869f93d3ed06fa9b227219518eb38a6b3145d1c4cf3cdf59e5477db2acc7b9cd0ff  ksshaskpass-5.18.1.tar.xz"
