--- a/community/libkscreen/APKBUILD
+++ b/community/libkscreen/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=libkscreen
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="KDE screen management software"
 arch="all !armhf" # armhf blocked by extra-cmake-modules
@@ -13,20 +13,13 @@ source="https://download.kde.org/stable/plasma/$pkgver/libkscreen-$pkgver.tar.xz
 subpackages="$pkgname-dev $pkgname-doc"
 options="!check" # Fails due to requiring dbus-x11 and it running
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_QCH=ON
-	make
+	make -C build
 }
 
 check() {
@@ -35,7 +28,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
-sha512sums="9766d0ed8a03361983fa127bb6b88f252d407bf65fd2845208f9507180bc68f7f3e6efac473a475b519b10618f477aa55811abd07c41059310aabb4c78c00c9f  libkscreen-5.18.0.tar.xz"
+sha512sums="f54ccef9f988cbe0246ffe4e3e86e532410392765c84186321e294c19eb8f4db7068a0a76a047292700568a3139ff68eec8e7e14253458129f5743787cffe957  libkscreen-5.18.1.tar.xz"
