--- a/community/libksysguard/APKBUILD
+++ b/community/libksysguard/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=libksysguard
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="KDE system monitor library"
 arch="all !armhf"
@@ -13,19 +13,12 @@ checkdepends="xvfb-run"
 source="https://download.kde.org/stable/plasma/$pkgver/libksysguard-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-lang"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -35,7 +28,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
-sha512sums="90dd36c7e85a66ea18f63f2c2db2601c4016a345faeb49524111de070f92dfc7334e2c5d377623c38ad3f94a351319dfa66a4b7296c40994c64b45d19f16d78d  libksysguard-5.18.0.tar.xz"
+sha512sums="e9706d384d7e8db912b3c4e481460ad0c1d1cd352bae89ec786efcc6bddecd9acdedbee95c301f4552a58a68366687c8b436b40548f3424e33de316536c62033  libksysguard-5.18.1.tar.xz"
