--- a/community/plasma-browser-integration/APKBUILD
+++ b/community/plasma-browser-integration/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=plasma-browser-integration
-pkgver=5.18.0
+pkgver=5.18.1
 pkgrel=0
 pkgdesc="Components necessary to integrate browsers into the Plasma Desktop"
 arch="all !armhf" # armhf blocked by extra-cmake-modules
@@ -11,19 +11,12 @@ makedepends="extra-cmake-modules qt5-qtbase-dev kio-dev ki18n-dev kconfig-dev kd
 source="https://download.kde.org/stable/plasma/$pkgver/plasma-browser-integration-$pkgver.tar.xz"
 subpackages="$pkgname-lang"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -32,8 +25,7 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
-sha512sums="3d0240e327b2b807563755cec9f9ffc1ecbe00ba7ad62c689861cb5beca4ba6bab2e5b82ed18e1d3d89ad9a8331c7b145d6260a8a0f45d13ba206252a4a1527c  plasma-browser-integration-5.18.0.tar.xz"
+sha512sums="70b938bae3399693448f0f32eb143d9245b396349360621264b9b046fd77605315a38ab800c03858a9a22d00c105d037cb3fa1926814d979dbf4607fda11db32  plasma-browser-integration-5.18.1.tar.xz"
