--- a/community/plasma-desktop/APKBUILD
+++ b/community/plasma-desktop/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=plasma-desktop
-pkgver=5.18.0
-pkgrel=2
+pkgver=5.18.1
+pkgrel=0
 pkgdesc="KDE Plasma Desktop"
 # s390x blocked by ibus
 # armhf blocked by qt5-qtdeclarative
@@ -50,8 +50,7 @@ depends_dev="
 	"
 makedepends="$depends_dev extra-cmake-modules kdoctools-dev"
 checkdepends="xvfb-run iso-codes"
-source="https://download.kde.org/stable/plasma/$pkgver/plasma-desktop-$pkgver.tar.xz
-	B417424.patch"
+source="https://download.kde.org/stable/plasma/$pkgver/plasma-desktop-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang knetattach"
 options="!check" # Requires running dbus
 
@@ -82,5 +81,4 @@ knetattach() {
 	cd "$builddir"/build/knetattach
 	DESTDIR="$subpkgdir" make install
 }
-sha512sums="863516751f4f37193ad5a96713fa9c7eb8d346e3bbe33dc43dcb83fa18955456dc875ddc3e2db990e7f3a017e394a69790e3dc21e13e8fc0c5d6841591c8fb4e  plasma-desktop-5.18.0.tar.xz
-9aea277502dba88e8ed43fb75f59b9c044ea84c7a99d46b21507fc862b6b221bcd8cad06cda7f5d66d9e15cfc4662feb19869de327c84b55c920218368f18dd7  B417424.patch"
+sha512sums="d0c3057f48dd5ce0d7d4a5a5931f58b879325a426107356fd618c9eea5fc3837ebef2635ac930c11d3061e3adf5c40deefdff8a38e7ca2e09f594acc02b5cc77  plasma-desktop-5.18.1.tar.xz"
